--- a/app/views/courses/members.html.erb
+++ b/app/views/courses/members.html.erb
@@ -1,3 +1,12 @@
+<% if current_user.view_status =="fantom"%>
+<div class="container">
+  <div class="content">
+	<center>
+<%= image_tag("suspendido.png")%>
+    </center>
+  </div>
+</div>
+<%else%>
 <div class="container">
   <div class="content">
     
@@ -30,6 +39,19 @@
         <h3><%= t('courses.members.teachers') %></h3>
         <div class="members">
           <% @teachers.each do |teacher| %>
+              <% if teacher.view_status == "fantom"%>
+             <div class="teacher">
+              <div class="row">
+                <div class="span1" style="margin-left:20px;">
+                  <%= image_tag('anonimus-user/tamano/anonimus2.png') %>
+                </div>
+                <div class="span5">
+                  <%= "Usuario Anónimo" %><br />
+                  <%= "Rol: Profesor" %>
+                </div>
+              </div>
+            </div>
+              <%else%>
             <div class="teacher">
               <div class="row">
                 <div class="span1" style="margin-left:20px;">
@@ -41,6 +63,7 @@
                 </div>
               </div>
             </div>
+             <%end%>
           <% end %>
         </div>
 
@@ -56,3 +79,4 @@
   </div>
   <%= render :partial => "shared/footer" %>
 </div>
+<%end%>
