--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -1,4 +1,12 @@
-
+<% if current_user.view_status =="fantom"%>
+<div class="container">
+  <div class="content">
+	<center>
+<%= image_tag("suspendido.png")%>
+    </center>
+  </div>
+</div>
+<%else%>
 
 <div class="container">
   <div class="content">
@@ -62,3 +70,4 @@
     
   </div>
 </div>
+<%end%>
