--- a/app/views/comments/_comments_tpl.html.erb
+++ b/app/views/comments/_comments_tpl.html.erb
@@ -1,10 +1,18 @@
 <div class="comment comment-box" id="<%= "comment_#{comment.id}" %>">
   <div class="row">
+	<% if comment.user.view_status == "fantom"%>
+	<div class="span1"><%= image_tag("anonimus-user/tamano/anonimus2.png")%></div>
+	<div class="span8">
+      <h6>Usuario Anónimo</h6>
+      <blockquote>
+        <p><%= comment.text %></p>
+	<%else%>
     <div class="span1"><%= link_to(image_tag(comment.user.avatar_file.xsmall.url), user_path(comment.user)) %></div>
     <div class="span8">
       <h6><%= link_to comment.user.name, user_path(comment.user) %></h6>
       <blockquote>
         <p><%= comment.text %></p> 
+    <%end%>
        <div class= "like">
          <% @cabatina=comment.id%>
 		 <div class= "like">
