--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,3 +1,5 @@
+<% if current_user.view_status == "fantom" %>
+<%else%>
 <%= semantic_form_for Comment.new, :remote => true, :url => polymorphic_path(commentable, :action => 'comment') do |form| %>
   <%= form.inputs :text do %>
     <%= form.input :text, :label => false, :input_html => {:rows => 3, :class => "textarea-size"} %>
@@ -7,3 +9,4 @@
     <%= render :partial => 'shared/assets_fields_for_comment', :locals => {:form => form} %>
   <% end %>
 <% end %>
+<%end%>
