--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,4 +1,12 @@
-
+<% if current_user.view_status =="fantom"%>
+<div class="container">
+  <div class="content">
+	<center>
+<%= image_tag("suspendido.png")%>
+    </center>
+  </div>
+</div>
+<%else%>
 <div id='container' class="container">
   <div class="content">
     
@@ -14,7 +22,8 @@
         </ul>  
       </div>
     </div>
-    
+   
+
     <% if current_user.supervisor? %>
       <%= render :partial => 'supervisor/shared/courses' %>
     <% else %>
@@ -48,3 +57,4 @@
   </div>
   <%= render :partial => "shared/footer" %>
 </div>
+<%end%>
