--- a/app/views/courses/wall.html.erb
+++ b/app/views/courses/wall.html.erb
@@ -1,3 +1,12 @@
+<% if current_user.view_status =="fantom"%>
+<div class="container">
+  <div class="content">
+	<center>
+<%= image_tag("suspendido.png")%>
+    </center>
+  </div>
+</div>
+<%else%>
 <div class="container">
   <div class="content">
     
@@ -37,7 +46,7 @@
   </div>
   <%= render :partial => "shared/footer" %>
 </div>
-
+<%end%>
 <script type="text/javascript">
   $(function(){
     setupAutoScroll();
