--- a/app/views/discussions/show.html.erb
+++ b/app/views/discussions/show.html.erb
@@ -1,3 +1,12 @@
+<% if current_user.view_status =="fantom"%>
+<div class="container">
+  <div class="content">
+	<center>
+<%= image_tag("suspendido.png")%>
+    </center>
+  </div>
+</div>
+<%else%>
 <div class="container">
   <div class="content">
     
@@ -24,9 +33,15 @@
           <div class="span5">
             <h2><%= @discussion.title %></h2>
             <div class="row">
+	        <% if @discussion.starter.view_status == "fantom"%>
+            <div class="span1"><%= image_tag("anonimus-user/tamano/anonimus2.png") %></div>
+              <div class="span4 left-margin author"><%= t('discussions.ago')%> <%= time_ago_in_words(@discussion.created_at) %> <%= t('discussions.by')%> <%= "Usuario Anónimo" %></div>
+
+            <%else%>
               <div class="span1"><%= link_to(image_tag(@discussion.starter.avatar_file.xsmall.url), user_path(@discussion.starter)) %></div>
               <div class="span4 left-margin author"><%= t('discussions.ago')%> <%= time_ago_in_words(@discussion.created_at) %> <%= t('discussions.by')%> <%= link_to(@discussion.starter.name, user_path(@discussion.starter)) %></div>
-            </div>
+          <%end%>
+          </div>
           </div>
           <div class="span3" style="margin-left:70px;">
             <% if @comments.empty? %>
@@ -60,7 +75,7 @@
     
   </div>
 </div>
-
+<%end%>
 <script type="text/javascript">
   $(function(){
     setupAutoScroll();
