--- a/app/views/home/dashboard_calendar.html.erb
+++ b/app/views/home/dashboard_calendar.html.erb
@@ -1,3 +1,12 @@
+<% if current_user.view_status =="fantom"%>
+<div class="container">
+  <div class="content">
+	<center>
+<%= image_tag("suspendido.png")%>
+    </center>
+  </div>
+</div>
+<%else%>
  <div class="container">
   <div class="content">
     <div class="row">
@@ -111,3 +120,4 @@
  </div>
 </div>
 </div>
+<%end%>
