--- a/app/views/home/reports.html.erb
+++ b/app/views/home/reports.html.erb
@@ -1,3 +1,12 @@
+<% if current_user.view_status =="fantom"%>
+<div class="container">
+  <div class="content">
+	<center>
+<%= image_tag("suspendido.png")%>
+    </center>
+  </div>
+</div>
+<%else%>
 <div class="container">
 <center>
 	<h1><%= link_to "REPORTE DE ANOMALÍA", soporte_path%></h1>
@@ -26,7 +35,7 @@
 </div>
 </div>
 </div>
-
+<%end%>
 <script>
 	function mostrarContacto(){
 		
