--- a/app/views/supervisor/shared/_admin_menu.html.erb
+++ b/app/views/supervisor/shared/_admin_menu.html.erb
@@ -1,4 +1,4 @@
-†<%= tabs_tag(:builder => MenuTabBuilder, :open_tabs => {:class => "menu"}) do |tab| %>
+<%= tabs_tag(:builder => MenuTabBuilder, :open_tabs => {:class => "menu"}) do |tab| %>
   <li class="top"><%= t('.admin') %></li>
   <%= tab.dashboard t('.dashboard'), supervisor_dashboard_path %>
   <%= tab.configuration t('.configuration'), edit_supervisor_network_path %>
@@ -7,6 +7,5 @@
   <%= teachers_notification_tab(@pending_teachers_total, tab) %>
   <%= tab.students t('.students'), supervisor_students_path %>
   <%= tab.new_user t('.new_user'), supervisor_new_user_path %>
-   <li><%= link_to(t('.reports'), "#") %></li>
-
+  <%= tab.suspended t('.suspendidos'), user_suspended_path %>
 <% end %>
