--- a/app/views/supervisor/students.html.erb
+++ b/app/views/supervisor/students.html.erb
@@ -18,7 +18,7 @@
       </div>
 
       <div class="span5">
-        <h2><%= pluralize @students_count, t('.registered_students') %></h2>
+        <h2><%= pluralize @students_count-@students_suspended, t('.registered_students') %></h2>
       </div>
       <div class="span2" style="margin-left:20px;">
         <%= link_to t('supervisor.import_students'), supervisor_import_users_path(:role => :student), :class => "btn small" %>
@@ -30,7 +30,11 @@
       <div class="span9">
 
         <div class="users students">
+
           <% @students.each do |student| %>
+               <%if student.view_status == 'fantom'%>
+			  <%else%>
+              <% @student_id = student.id %>
             <div class="user padding-all <%= cycle('odd', 'even') %>">
               <div class="student">
                 <div class="row">
@@ -44,14 +48,24 @@
                   <div class="span3-5">
                     <div class="user_options">
                       <div class="edit_role">
-                        <%= link_to t('.change_role'), 'javascript:void(0)', :class=>"accept btn success small change_role_button" %>
-                        <%= link_to t('.destroy'), '#', :class=>"reject btn small danger" %>
+                        <%= link_to  " Opciones de edición de usuario ", 'javascript:void(0)', :class=>"accept btn success small change_role_button" %>
+                       
                       </div>
                       <div id="edit_role_form" style="display:none;">
                         <%= form_for student do |f|%>
                           <%= f.select :role, options_for_select([[t('.student'), "student"], [t('.teacher'), "teacher"], [t('.supervisor'), "supervisor"]])%>
                           <%= f.submit t('.update'), :class => "accept btn success small"%>
                         <%end%>
+
+                          <h3>Cambiar el status de usuario</h3>
+		                  <%= form_for @status do |view_status|%>
+	                      
+		                  <%= view_status.select :view_status, options_for_select([[t('.suspender'), "fantom"], [t('.activar'), "live"]])%>
+		                   <%= view_status.hidden_field :user_id, :value =>  @student_id %>
+		                   <%= view_status.hidden_field :date_status, :value => Time.now %>
+		                  <%= view_status.submit "Cambiar status", :class => "reject btn danger"%>
+		                   <i><p> *Al suspender un usuario se cobrará 1 USD ya que su información quedará guardada en la plataforma, para que la puedas usar en un futuro. </p> </i>
+		                <%end%>
                       </div>
                     </div>
                   </div>
@@ -59,6 +73,7 @@
               </div>
             </div>
           <% end %>
+           <%end%>
           <%= paginate @students%>
         </div>
       </div>
