--- a/app/views/supervisor/teachers.html.erb
+++ b/app/views/supervisor/teachers.html.erb
@@ -1,7 +1,6 @@
 <%= javascript_include_tag 'bootstrap-tabs' %>
 <%= javascript_include_tag 'supervisor'%>
 <div class="container">
-  
   <div class="row">
     <div class="span16">
       <ul class="breadcrumb">
@@ -19,7 +18,7 @@
       </div>
 
       <div class="span5">
-        <h2><%= pluralize @teachers_count, t('.registered_teachers') %></h2>
+        <h2><%= pluralize @teachers_count-@teachers_suspended, t('.registered_teachers') %></h2>
       </div>
       <div class="span2" style="margin-left:20px;">
         <%= link_to t('supervisor.import_teachers'), supervisor_import_users_path(:role => :teacher), :class => "btn small" %>
