--- a/app/views/users/_profile_menu.html.erb
+++ b/app/views/users/_profile_menu.html.erb
@@ -1,10 +1,15 @@
+<% if @user.view_status == "fantom"%>
+<div class="underline">
+  <%= image_tag('anonimus-user/tamano/anonimus1.png') %>
+</div>
+<%else%>
 <div class="underline">
   <%= image_tag @user.avatar_file.small.url %>
 </div>
-
 <div class="underline">	
   <%= tabs_tag(:builder => MenuTabBuilder, :open_tabs => { :class => "left-nav-main-ul" }) do |tab| %>
     <%= tab.profile t('dashboard.profile'), user_path(@user), :class => "informacion" %>
     <%= tab.wall t('profile.wall'), wall_for_user_path(@user), :class => "actualizaciones" %>
   <% end %>
 </div>
+<%end%>
