--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -26,7 +26,7 @@
   </div>
 </div>
 <script type="text/javascript">
-!function( $ ){
+/*!function( $ ){
   $.fn.dropdown = function ( selector ) {
     return this.each(function () {
       $(this).delegate(selector || d, 'click', function (e) {
@@ -54,5 +54,5 @@
 
   $(function(){
 	$(".dropdown-toggle").dropdown()
-  }); 
+  }); */
 </script>
