cambios para elimiar cursos

--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -50,9 +50,9 @@
     $('body').dropdown()
   })
 
-}( window.jQuery || window.ender );
+}( window.jQuery || window.ender );*/
 
   $(function(){
 	$(".dropdown-toggle").dropdown()
-  });*/
+  });
 </script>
