--- a/app/views/courses/_course_menu.html.erb
+++ b/app/views/courses/_course_menu.html.erb
@@ -1,3 +1,15 @@
+<% if @course.status == "finish"%>
+<div class="underline">
+  <%= image_tag @course.course_logo_file.small.url %>
+</div>
+<div class="underline">	
+<%= tabs_tag(:builder => MenuTabBuilder, :open_tabs => { :class => "left-nav-main-ul" }) do |tab| %>
+    <%= tab.course t('courses.information'), course_path(@course), :class => "informacion" %>
+    <%= tab.assignments t('.assignments'), course_assignments_path(@course), :class => "tareas" %>
+    <%= tab.discussions t('.discussions'), course_discussions_path(@course), :class => "discusiones" %>
+  <% end %>
+</div>
+<%else%>
 <div class="underline">
   <%= image_tag @course.course_logo_file.small.url %>
 </div>
@@ -12,3 +24,4 @@
      <%= tab.calification t('courses.calification.calificaciones'), calification_for_course_path(@course), :class => "calification" %>
   <% end %>
 </div>
+<%end%>
