--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,3 +1,65 @@
+<% if @course.status == "finish"%>
+<div class="container">
+  <div class="content">
+    
+    <div class="row">
+      <div class="span16">
+        <ul class="breadcrumb">
+          <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
+          <li><%= link_to(t('courses.courses'), courses_path) %> <span class="divider">/</span></li>
+          <li class="active"><%= @course.name %></li>
+           
+        </ul>  
+      </div>
+    </div>
+    <div class="row">
+      <div class="span3">
+        <%= render :partial => "course_menu" %>
+      </div>
+      <div class="span10">
+        <div class="row">
+          <div class="span7">
+            <h2><%= "este curso esta finalizado: #{@course.name} "  %></h2>
+            <div class="public-course">
+              <% if @course.public? %>
+                <%= t('courses.public') %>
+              <% else %>
+                <%= t('courses.private') %>
+              <% end %>
+            </div>
+          </div>
+          <div class="span2">
+            <% if current_user.manageable_courses.include? @course %>
+           
+              <%= form_for @status_course do |status|%>
+                <%= status.hidden_field :status, :value => "active" %>
+                <%= status.hidden_field :date, :value => Date.today %>
+                <%= status.hidden_field :course_id, :value => @course.id%>
+                <%= status.submit "Reactivar curso", :class => "btn success"%>
+
+              <%end%>
+            <% end %>
+
+          </div>
+ 
+        </div>
+        <div class="row with line">
+          <div class="description"><%= t('courses.description') %></div>
+          <div class="expander"><p><%= @course.description %></p></div>
+        </div>
+        
+        <div class="section-divider"><h3><%= t('courses.archives') %></h3></div>
+        <%= render :partial => 'shared/assets_table', :locals => {:record => @course} %>
+      </div>
+      <div class="span3" style="margin:0;">
+        <%= render :partial => "shared/adds" %>
+      </div>
+    </div>
+  </div>
+  <%= render :partial => "shared/footer" %>
+</div>
+
+<%else%>
 <div class="container">
   <div class="content">
     
@@ -31,7 +93,13 @@
           <div class="span2">
             <% if current_user.manageable_courses.include? @course %>
               <%= link_to(t('courses.edit_course'), edit_course_path(@course), :class => "btn info small right") %>
-            
+              <%= form_for @status_course do |status|%>
+                <%= status.hidden_field :status, :value => "finish" %>
+                <%= status.hidden_field :date, :value => Date.today %>
+                <%= status.hidden_field :course_id, :value => @course.id%>
+                <%= status.submit "Finalizar curso", :class => "btn danger"%>
+
+              <%end%>
             <% end %>
 
           </div>
@@ -60,3 +128,4 @@
   </div>
   <%= render :partial => "shared/footer" %>
 </div>
+<%end%>
