leyenda del clonar

--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -49,6 +49,6 @@
 	<%end%>
  </div>
 <div class="modal-footer">
-   <p><b>Notificación:</b> Al clonar un curso todos los archivos principales del mismo serán traspasados al nuevo curso, lo que permitirá reiniciar la asignatura ya con su pre-cargado de material. </p>
+   <p><b>Notificación:</b> Al clonar un curso todos los archivos principales del mismo serán traspasados al nuevo curso, <i>"una vez clonado el curso solo serán visibles en el curso recién creado (le recomendamos que el curso anterior sea eliminado o finalizado)"</i>, lo que permitirá reiniciar la asignatura ya con su pre-cargado de material. </p>
 </div>
 </div>
