--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -25,7 +25,7 @@
      <tbody>
 	<tr class="asset">
     <td><p><%=link_to image_tag delivery.user.avatar_file.xsmall.url %>
-        <%=  delivery.user.name %> / Porcentaje de la entrega: <b><%= delivery.score if delivery.raiting > 0%> %</b></p></td>
+        <%=  delivery.user.name %> / Porcentaje de la entrega: <b><%= delivery.score if delivery.raiting%> %</b></p></td>
 
     </tr>
      </tbody>
@@ -85,7 +85,7 @@
 	  <%user.deliveries.each do |delivery|%>
 	     
 	    <% delivery.score %>
-	    <% total_deliveries=total_deliveries+delivery.score if delivery.raiting > 0%>
+	    <% total_deliveries=total_deliveries+delivery.score if delivery.raiting%>
 	   
 	  <%end%>
 	   <%user.survey_replies.each do |survey|%>
@@ -127,7 +127,7 @@
   <%user.deliveries.each do |delivery|%>
      
     <% delivery.score %>
-    <% total_deliveries=total_deliveries+delivery.score if delivery.raiting > 0%>
+    <% total_deliveries=total_deliveries+delivery.score if delivery.raiting%>
     
   <%end%>
    <%user.survey_replies.each do |survey|%>
@@ -270,7 +270,7 @@ $(document).ready(function() {
   <% califn = 0%>
   <% codn = 0%>
  <%assigment.deliveries.each do |delivery|%>
-   	<% califn = califn + delivery.score if delivery.raiting > 0%>
+   	<% califn = califn + delivery.score if delivery.raiting%>
     <% codn = califn/@course.users.count%>
     <% codan = codn-100%>
     <% porcento_delivery.push(codn)%>
