cambio en el calificaciones por los del raiting

--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -86,7 +86,7 @@
 	     
 	   
 		<% delivery.score ? delivery.score : 0 %>		
-	    <% total_deliveries=total_deliveries + delivery.score ? delivery.score : 0 if delivery.raiting%>
+	    <% total_deliveries=total_deliveries + (delivery.score ? delivery.score : 0) if delivery.raiting%>
 	   
 	  <%end%>
 	   <%user.survey_replies.each do |survey|%>
