--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -25,7 +25,7 @@
      <tbody>
 	<tr class="asset">
     <td><p><%=link_to image_tag delivery.user.avatar_file.xsmall.url %>
-        <%=  delivery.user.name %> / Porcentaje de la entrega: <b><%= delivery.score ? delivery.score : 0 if delivery.raiting%> %</b></p></td>
+        <%=  delivery.user.name %> / Porcentaje de la entrega: <b><%= (delivery.score ? delivery.score : 0) if delivery.raiting%> %</b></p></td>
 
     </tr>
      </tbody>
@@ -85,7 +85,7 @@
 	  <%user.deliveries.each do |delivery|%>
 	     
 	   
-		<% delivery.score ? delivery.score : 0 %>		
+			
 	    <% total_deliveries=total_deliveries + (delivery.score ? delivery.score : 0) if delivery.raiting%>
 	   
 	  <%end%>
@@ -128,7 +128,7 @@
   <%user.deliveries.each do |delivery|%>
     
  	
-    <% delivery.score ? delivery.score : 0 %>	
+    	
     <% total_deliveries=total_deliveries + delivery.score ? delivery.score : 0 if delivery.raiting%>
   
 
