subiendo validadciones de deliveries a cursame

--- a/app/views/teachers/deliveries/index.html.erb
+++ b/app/views/teachers/deliveries/index.html.erb
@@ -110,6 +110,9 @@
 
 	        <%= link_to t('.show'), delivery, :class => "btn" %>
          <%else%>
+             <% if delivery.limit == "nil"%>
+                  Calificación asignada:  <b class="label-tag calification-bad">0</b>
+             <%else%>
             <% @calculus = (delivery.limit/2)%> 
 
            <% if delivery.raiting > @calculus %>
@@ -118,21 +121,26 @@
            Calificación asignada:  <b class="label-tag calification-bad"><%=delivery.raiting%></b>      
             <%end%>
            <%end%>
+           <%end%>
         <%else%>
 
           <div class="delivery <%= cycle("odd", "even") %>">
             <%= image_tag delivery.user.avatar_file.xsmall.url %>
             <div class="left right-margin"><%= link_to delivery.user.name, user_path(delivery.user) %><div class="assignment-values"><%= l delivery.updated_at, :format => :short %></div></div>
             <%= link_to t('.show'), delivery, :class => "btn" %>
-          
-          <% @calculus = (delivery.limit/2)%> 
 
+          	<% if delivery.limit == "nil"%>
+                  Calificación asignada:  <b class="label-tag calification-bad">0</b>
+             <%else%>
+
+          <% @calculus = (delivery.limit/2)%> 
+              
            <% if delivery.raiting > @calculus %>
           Calificación asignada:  <b class="label-tag calification-good"><%=delivery.raiting %></b>
             <%else%>
            Calificación asignada:  <b class="label-tag calification-bad"><%=delivery.raiting %></b>      
             <%end%>
-          
+          <%end%>
        <%end%>
           </div>
         <% end %>
